# neo-symbolic-executor

./: .gitignore  CHANGELOG.md  Directory.Build.props  LICENSE  Neo.SymbolicExecutor.sln  README.md  pyproject.toml
.github/workflows/: ci.yml
csharp/: README.md
csharp/devpack-integration/: README.md
devpack-integration/: Neo.SymbolicExecutor.props  Neo.SymbolicExecutor.targets  README.md
docs/: design.md
docs/plans/: 2026-02-19-neo-symbolic-hardening-plan.md
docs/releases/: v0.3.0.md
examples/: assertion.neoasm  collections.neoasm  sample_audit.py  symbolic_map.neoasm  validate_devpack_corpus.py
fuzzing/: README.md  __init__.py  _bootstrap.py  dict.txt  fuzz_assembly_parser.py  fuzz_bytecode_decoder.py  fuzz_execution_engine.py  fuzz_nef_parser.py  fuzz_source_loader.py  fuzz_structured_bytecode.py  run_all_fuzzers.py
fuzzing/corpus/: asm_seed_0.neoasm  asm_seed_1.neoasm  asm_seed_2.neoasm  branching_seed.neoasm  buffer_seed.neoasm  call_seed.neoasm
neo_symbolic_executor/: __init__.py  __main__.py  assembly.py  bytecode.py  nef.py  opcodes.py
scripts/: run-fuzzer-forever.sh
src/: z3.py
src/Neo.SymbolicExecutor/: CowCollections.cs  Exceptions.cs  ExecutionOptions.cs  ExecutionResult.cs  ExecutionState.cs  Expression.cs  ExpressionFactory.cs  Heap.cs  HeapObject.cs  Instruction.cs  Neo.SymbolicExecutor.csproj  NeoCallFlags.cs  NeoEcPoint.cs  NeoNativeContractHashes.cs  NeoTriggerTypes.cs  Program.cs  Severity.cs  Sort.cs  SymbolicEngine.Branches.cs  SymbolicEngine.Calls.cs  SymbolicEngine.Compound.cs  SymbolicEngine.Concretize.cs  SymbolicEngine.Dispatch.cs  SymbolicEngine.Splice.cs  SymbolicEngine.Syscalls.cs  SymbolicEngine.Try.cs  SymbolicEngine.Type.cs  SymbolicEngine.cs  SymbolicValue.cs  SyscallRegistry.cs  Telemetry.cs  TryFrame.cs  packages.lock.json
src/Neo.SymbolicExecutor.Cli/: Neo.SymbolicExecutor.Cli.csproj  Program.cs  packages.lock.json
src/Neo.SymbolicExecutor.Detectors/: BaseDetector.cs  CallFlags.cs  DefaultDetectorSet.cs  DetectorEngine.cs  Finding.cs  GateEvaluation.cs  NativeContractRegistry.cs  Neo.SymbolicExecutor.Detectors.csproj  ReportGenerator.cs  SourceHints.cs  packages.lock.json
src/Neo.SymbolicExecutor.Fuzzer/: CrashMinimizer.cs  CrashRecorder.cs  FuzzCampaign.cs  IFuzzTarget.cs  Neo.SymbolicExecutor.Fuzzer.csproj  Program.cs  README.md  Statistics.cs  packages.lock.json
src/Neo.SymbolicExecutor.Smt/: Neo.SymbolicExecutor.Smt.csproj  PortableSmtSolver.cs  SmtLibTranslator.cs  Translator.cs  Z3Backend.cs  packages.lock.json
tests/: conftest.py  test_advanced_detectors.py  test_cli.py  test_cli_explore.py  test_detectors.py  test_engine.py  test_executor_bridge.py  test_fuzz_corpus.py  test_fuzzing.py  test_manifest.py  test_modern_cli.py  test_modern_engine.py  test_nef_envelope.py  test_nef_parser.py  test_parser.py  test_reporting.py  test_syscalls.py
(+617 files in other folders)
